--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [
     "shoppinglist"
   ],
-  "author": "kvs",
+  "author": "erno",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
